Better handling of compiled assets - TR-5sa26IKs

--- a/resources/sass/_custom.scss
+++ b/resources/sass/_custom.scss
@@ -1,8 +1,8 @@
-/*
-|--------------------------------------------------------------------------
-| Body
-|--------------------------------------------------------------------------
-*/
+//
+//--------------------------------------------------------------------------
+// Body
+//--------------------------------------------------------------------------
+//
 
 html {
     height: 100%;
@@ -16,11 +16,11 @@ body {
     padding-bottom: 183px;
 }
 
-/*
-|--------------------------------------------------------------------------
-| Global
-|--------------------------------------------------------------------------
-*/
+//
+//--------------------------------------------------------------------------
+// Global
+//--------------------------------------------------------------------------
+//
 
 .cursor-pointer {
     cursor: pointer;
@@ -52,11 +52,11 @@ body {
     }
 }
 
-/*
-|--------------------------------------------------------------------------
-| Header
-|--------------------------------------------------------------------------
-*/
+//
+//--------------------------------------------------------------------------
+// Header
+//--------------------------------------------------------------------------
+//
 
 .navbar {
     border-bottom: 1px solid rgba($primary, .1);
@@ -66,11 +66,11 @@ body {
     }
 }
 
-/*
-|--------------------------------------------------------------------------
-| Content
-|--------------------------------------------------------------------------
-*/
+//
+//--------------------------------------------------------------------------
+// Content
+//--------------------------------------------------------------------------
+//
 
 //
 // Page About
@@ -199,11 +199,11 @@ body {
     }
 }
 
-/*
-|--------------------------------------------------------------------------
-| Footer
-|--------------------------------------------------------------------------
-*/
+//
+//--------------------------------------------------------------------------
+// Footer
+//--------------------------------------------------------------------------
+//
 
 footer {
     height: 183px;
